# android-whu

./: README.md  build.gradle  settings.gradle
lib/src/main/jni/ndk-modules/libwhu/libwhu-4.3.0a/src/: Makefile.am  Makefile.in
lib/src/main/jni/ndk-modules/libwhu/libwhu-4.3.0a/src/connection_cache/: alloc_cache.c  cache_aux_1.h
lib/src/main/jni/ndk-modules/libwhu/libwhu-4.3.0a/src/control_points/: gaia_control_points.c  grass_crs.h  grass_crs3d.c  grass_georef.c  grass_georef_tps.c
lib/src/main/jni/ndk-modules/libwhu/libwhu-4.3.0a/src/dxf/: dxf_load_distinct.c  dxf_load_mixed.c  dxf_loader.c  dxf_parser.c  dxf_private.h  dxf_writer.c
lib/src/main/jni/ndk-modules/libwhu/libwhu-4.3.0a/src/gaiaaux/: gg_sqlaux.c  gg_utf8.c
lib/src/main/jni/ndk-modules/libwhu/libwhu-4.3.0a/src/gaiaexif/: gaia_exif.c
lib/src/main/jni/ndk-modules/libwhu/libwhu-4.3.0a/src/gaiageo/: Ewkt.c  Gml.c  Kml.c  geoJSON.c  gg_advanced.c  gg_endian.c  gg_ewkt.c  gg_extras.c  gg_geoJSON.c  gg_geodesic.c  gg_geometries.c  gg_geoscvt.c  gg_gml.c  gg_kml.c  gg_lwgeom.c  gg_matrix.c  gg_relations.c  gg_relations_ext.c  gg_shape.c  gg_transform.c  gg_vanuatu.c  gg_voronoj.c  gg_wkb.c  gg_wkt.c  gg_xml.c  lex.Ewkt.c  lex.GeoJson.c  lex.Gml.c  lex.Kml.c  lex.VanuatuWkt.c  vanuatuWkt.c
lib/src/main/jni/ndk-modules/libwhu/libwhu-4.3.0a/src/geopackage/: gaia_cvt_gpkg.c  geopackage_internal.h  gpkgAddGeometryColumn.c  gpkgBinary.c  gpkgCreateBaseTables.c  gpkgCreateTilesTable.c  gpkgCreateTilesZoomLevel.c  gpkgGetImageType.c  gpkgInsertEpsgSRID.c  gpkgMakePoint.c  gpkg_add_geometry_triggers.c  gpkg_add_spatial_index.c  gpkg_add_tile_triggers.c  gpkg_get_normal_row.c  gpkg_get_normal_zoom.c
lib/src/main/jni/ndk-modules/libwhu/libwhu-4.3.0a/src/headers/: Makefile.am  Makefile.in  whu.h  whu_private.h
lib/src/main/jni/ndk-modules/libwhu/libwhu-4.3.0a/src/md5/: gaia_md5.c  md5.c  md5.h
lib/src/main/jni/ndk-modules/libwhu/libwhu-4.3.0a/src/shapefiles/: shapefiles.c  validator.c
lib/src/main/jni/ndk-modules/libwhu/libwhu-4.3.0a/src/srsinit/: epsg_inlined_00.c  epsg_inlined_01.c  epsg_inlined_02.c  epsg_inlined_03.c  epsg_inlined_04.c  epsg_inlined_05.c  epsg_inlined_06.c  epsg_inlined_07.c  epsg_inlined_08.c  epsg_inlined_09.c  epsg_inlined_10.c  epsg_inlined_11.c  epsg_inlined_12.c  epsg_inlined_13.c  epsg_inlined_14.c  epsg_inlined_15.c  epsg_inlined_16.c  epsg_inlined_17.c  epsg_inlined_18.c  epsg_inlined_19.c  epsg_inlined_20.c  epsg_inlined_21.c  epsg_inlined_22.c  epsg_inlined_23.c  epsg_inlined_24.c  epsg_inlined_25.c  epsg_inlined_26.c  epsg_inlined_27.c  epsg_inlined_28.c  epsg_inlined_29.c  epsg_inlined_30.c  (+21 more)
(+152 files in other folders)
