
noinst_HEADERS = whu_private.h
nobase_include_HEADERS = whu.h \
	whu/gaiaexif.h \
	whu/gaiaaux.h \
	whu/gaiamatrix.h \
	whu/gaiageo.h \
	whu/gg_const.h \
	whu/gg_structs.h \
	whu/gg_core.h \
	whu/gg_mbr.h \
	whu/gg_formats.h \
	whu/gg_dynamic.h \
	whu/gg_advanced.h \
	whu/gg_xml.h \
	whu/gg_wfs.h \
	whu/gg_dxf.h \
	whu/whu.h \
	whu/sqlite.h \
	whu/debug.h \
	whu/geopackage.h \
	whu/control_points.h
